0.72

- cdparanoia included.
- iso-info options more like cdrtools isoinfo.
- cd-drive/cd-info show more reading capabilties and show that.
- cd-info now shows the total disc size.
- Filesystem reorganization to better support growth and paranoia inclusion
- FreeBSD 6 tolerated
- mode detection fixes
- C++ fixes
- Update doc

0.71

- Some Joliet support.
- Portability fixes for C++ and older C compilers. 
- Work towards XBOX support.
- TOC for DVD's works more often
- Make generic list routines and declarations and byte swapping
  routines public. Eventually everything will use glib.
- list-returning routines like iso9660_fs_readdir and
  iso9660_ifs_readdir no longer return void * (and require casting)
  but return the correct type.
- Some example programs have been renamed to more give meaningful
  names.
- Add iso9660_ifs_is_xa() a routine to determine if an iso image has
  XA attributes.
- iso-info now shows XA attributes if that is available. 
- Some bug fixes


0.70

- SCSI MMC interface routine (all except Darwin)
- CD-Text support (all except Darwin)
- Distinguish DVD's from CD's
- Code clean-ups and reduced code duplication
- Better CUE parsing 
- Reporting drive capability is more accurate 
- add constant driver_id for kind of hardware driver in build
- new drive scanning routines which pass back driver as well 
  as drive string. Speeds up subsequent opens.

0.69
- Add interface returning drive capabilities (cdio_get_drive_cap).
- Minimal cdrdao image reading (thanks to Svend S. Sorensen)
- Some important (I think) bug fixes
- Redo types of lsn and lba to allow negative values. Should model MMC3
  specs. Add max/min values for lsn.
- More complete MMC command set
- FreeBSD driver ioctl and CAM reading works better (thanks to Heiner)
- OSX drive reading works better (thanks to Justin F. Hallett)
- cd-read allows dumping bytes to stdout and hexdumps to a file
  via options --no-hexdump and --hexdump