@@ -1,11 +1,14 @@
 0.72
 
 - cdparanoia included.
+- added setting/getting CD speed, finding the track containing an LSN.
+- improve cdrdao image reading
 - iso-info options more like cdrtools isoinfo.
 - cd-drive/cd-info show more reading capabilties and show that.
 - cd-info now shows the total disc size.
 - Filesystem reorganization to better support growth and paranoia inclusion
 - FreeBSD 6 tolerated
+- improve Win32 driver
 - mode detection fixes
 - C++ fixes
 - Update doc
@@ -166,4 +169,4 @@
 0.1
   Routines split off from VCDImager.
 
-$Id: NEWS,v 1.59 2004/12/19 02:31:27 rocky Exp $
+$Id: NEWS,v 1.60 2005/01/18 03:46:40 rocky Exp $
